[tool.poetry]
name = "priceana"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["first-name last-name <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/your-github-username/priceana"
homepage = "https://github.com/your-github-username/priceana"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.2"
aiohttp = "^3.7.4"
pymongo = "^3.12.0"
termcolor = "^1.1.0"
mongomock = "^3.23.0"
asynctest = "^0.13.0"
tqdm = "^4.62.2"
pytest-asyncio = "^0.15.1"
pytest-trio = "^0.7.0"
pytest-tornasync = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.0"
black = "^21.8b0"
isort = "^5.9.3"
pylint = "^2.10.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
